--- a/public/css/layout.css
+++ b/public/css/layout.css
@@ -107,6 +107,9 @@
 .bodycontainer__right{
     box-sizing: border-box;
     overflow-x: hidden;
+    background-image: url("../images/layerbg.png");
+    background-repeat: repeat-y;
+    background-size: contain;
 }
 .bodycontainer__right__layer__item {
     width: 100%;
@@ -138,6 +141,9 @@
     display: flex;
     justify-content: space-around;
     text-align: center;
+    background-color: #caa5fc;
+    border-radius: 5px;
+    opacity: 0.9;
 }
 .bodycontainer__right__control img{
     height: 40px;
