--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,64 +1,141 @@
-.bodycontainer__left__bottom_color{
-    bottom: 0;
-    width: 100%;
-    height: 40px;
-    position: absolute;
+/* lets import css file */
+@import url("./reset.css");
+
+.bodycontainer__left__bottom_color {
+  bottom: 0;
+  width: 100%;
+  height: 40px;
+  position: absolute;
 }
-#colorpicker{
-    width: 100%;
-    height: 100%;
+#colorpicker {
+  width: 100%;
+  height: 100%;
 }
-.topbar__upper__hide_menu{
-    display: none;
+.topbar__upper__hide_menu {
+  display: none;
 }
 /* styling the config div */
-.draw__config{
-    width: fit-content;
-    height: 100%;
-    border: 1px solid black;
-    padding-left: 20px;
-    font-size: 1rem;
-
-
+.draw__config {
+  width: fit-content;
+  height: 100%;
+  border: 1px solid black;
+  font-size: 1rem;
+  padding: 0 5px;
 }
-label{
-    color: black;
-    font-style:bold;
+label {
+  color: black;
+  font-style: bold;
 }
-.erase__config{
-    width: fit-content;
-    height: 100%;
-    border: 1px solid black;
-    padding-left: 20px;
-    font-size: 1rem;
-
-
+.draw__config button {
+  display: inline-block;
+  padding: 0 5px;
 }
-.text__config{
-    width: fit-content;
-    height: 100%;
-    border: 1px solid black;
-    padding-left: 20px;
-    font-size: 1rem;
-
+.erase__config {
+  width: fit-content;
+  height: 100%;
+  border: 1px solid black;
+  font-size: 1rem;
+  padding: 0 5px;
 }
-input[type="range"]{
-    width: 200px;
-    background-color: #E2D1F9 !important;
-    color: aqua;
-    appearance: none;
-    vertical-align:middle
-
+.text__config {
+  width: fit-content;
+  height: 100%;
+  border: 1px solid black;
+  font-size: 1rem;
+  padding: 0 5px;
+}
+.rotate__config {
+  width: fit-content;
+  height: 100%;
+  border: 1px solid black;
+  font-size: 1rem;
+  padding: 0 5px;
+}
+.filter__config {
+  width: fit-content;
+  height: 100%;
+  border: 1px solid black;
+  font-size: 1rem;
+  padding: 0 5px;
+}
+input[type="range"] {
+  width: 200px;
+  background-color: #e2d1f9 !important;
+  color: aqua;
+  appearance: none;
+  vertical-align: middle;
 }
 
-#text__config__value{
-    min-width: 300px;
-    background-color: #E2D1F9;
-    padding: 2px;
-    appearance: none;
-    border: none;
+#text__config__value {
+  min-width: 300px;
+  background-color: #e2d1f9;
+  padding: 2px;
+  appearance: none;
+  border: none;
 }
 
-#myCanvasWrapper{
-    box-shadow: inset 0px 0px 50px #E2D1F9;
+#myCanvasWrapper {
+  box-shadow: inset 0px 0px 50px #e2d1f9;
+}
+
+.bodycontainer__right {
+  background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
+  background-size: 400% 400%;
+  animation: gradients 15s ease infinite;
+  height: 100vh;
+}
+
+.startingWindow {
+  background: linear-gradient(
+    to right,
+    var(--pp-blue),
+    var(--pp-ltblue),
+    var(--sp-yellow),
+    var(--pp-purple),
+    var(--pp-blue)
+  );
+  overflow: hidden;
+  background-size: 400% 400%;
+  /* Animation */
+  animation-duration: 15s;
+  animation-iteration-count: infinite;
+  animation-name: gradients;
+}
+@keyframes gradients {
+  0% {
+    background-position: 0 0;
+  }
+  25% {
+    background-position: 50% 0;
+  }
+  50% {
+    background-position: 90% 0;
+  }
+  60% {
+    background-position: 60%;
+  }
+  75% {
+    background-position: 40%;
+  }
+  100% {
+    background-position: 0 0;
+  }
+}
+
+.helpWindow {
+  background: linear-gradient(
+    to right,
+    var(--pp-blue),
+    var(--pp-ltblue),
+    var(--sp-yellow),
+    var(--pp-purple),
+    var(--pp-blue)
+  );
+  overflow: hidden;
+  background-size: 400% 400%;
+
+  /* Animation */
+  animation-duration: 40s;
+  animation-iteration-count: infinite;
+  animation-name: gradients;
 }
